--- a/index.html
+++ b/index.html
@@ -176,6 +176,15 @@
                         </a>
                     </div>
                 </div>
+                <div class="showcase-item resume">
+                    <h2>Resume</h2>
+                    <div class="showcase-content">
+                        <a href="DavidLewandaResume.pdf" target="_blank" class="showcase-link resume-link">
+                            <i class="fas fa-file-pdf"></i>
+                            <span>Download Resume (PDF)</span>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
