--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <section id="experience" class="experience">
         <div class="container">
-            <h2>Core Competencies</h2>
+            <h2>Experience & Core Competencies</h2>
             <div class="competencies-grid">
                 <div class="competency-item" data-id="director">
                     <div class="card-content front">
@@ -140,13 +140,14 @@
                     <div class="card-content back">
                         <i class="fas fa-times close-card"></i>
                         <h3>Product-Led Mobile Expert</h3>
-                        <p>Delivering exceptional mobile experiences with a focus on performance and usability. Decreased application crash rates from 7% to 1.1% with a focus on delivery quality and rigor.</p>
+                        <p>Delivering exceptional mobile experiences with a focus on performance and usability.</p>
                         <ul>
                             <li>Mobile app optimization</li>
                             <li>Cross-platform development</li>
                             <li>Performance monitoring</li>
                             <li>User experience enhancement</li>
                         </ul>
+                        <p>At MLB, I lead my team to decrease application crash rates from 7% to 1.1% on the keystone MLB App for iOS with a focus on delivery quality and rigor.</p>
                     </div>
                 </div>
             </div>
@@ -155,11 +156,11 @@
 
     <section id="showcase" class="showcase">
         <div class="container">
+            <h2>Showcase</h2>
             <div class="showcase-grid">
                 <div class="showcase-item projects">
                     <h2>Projects</h2>
                     <div class="showcase-content">
-                        <p>Check out my projects and contributions on GitHub:</p>
                         <a href="https://github.com/dlewanda" target="_blank" class="showcase-link github-link">
                             <i class="fab fa-github"></i>
                             <span>View My GitHub Profile</span>
@@ -169,7 +170,6 @@
                 <div class="showcase-item writings">
                     <h2>Writings</h2>
                     <div class="showcase-content">
-                        <p>Read my thoughts and insights on technology leadership, engineering management, and software development:</p>
                         <a href="https://medium.com/@dlewanda/" target="_blank" class="showcase-link medium-link">
                             <i class="fab fa-medium"></i>
                             <span>Read My Articles on Medium</span>
