--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <div class="showcase-content">
                         <a href="https://github.com/dlewanda" target="_blank" class="showcase-link github-link">
                             <i class="fab fa-github"></i>
-                            <span>View My GitHub Profile</span>
+                            <span>View My Profile</span>
                         </a>
                     </div>
                 </div>
@@ -172,7 +172,7 @@
                     <div class="showcase-content">
                         <a href="https://medium.com/@dlewanda/" target="_blank" class="showcase-link medium-link">
                             <i class="fab fa-medium"></i>
-                            <span>Read My Articles on Medium</span>
+                            <span>Read My Articles</span>
                         </a>
                     </div>
                 </div>
@@ -181,7 +181,7 @@
                     <div class="showcase-content">
                         <a href="DavidLewandaResume.pdf" target="_blank" class="showcase-link resume-link">
                             <i class="fas fa-file-pdf"></i>
-                            <span>Download Resume (PDF)</span>
+                            <span>Download (PDF)</span>
                         </a>
                     </div>
                 </div>
