--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <div class="container">
             <h2>Get in Touch</h2>
             <div class="contact-content">
-                <p>Interested in connecting? Feel free to reach out.</p>
+                <p>Interested in connecting? Please reach out.</p>
                 <div class="social-links">
                     <a href="https://www.linkedin.com/in/dlewanda/" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="https://github.com/dlewanda" target="_blank"><i class="fab fa-github"></i></a>
