--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <div class="container">
             <h2>About Me</h2>
             <div class="about-content">
-                <p>I am a technology leader with over twenty years of experience committed to developing world-class solutions for well-respected companies including Major League Baseball and Samsung. Having worked in mobile, consumer electronics, streaming media, and e-commerce in early stage startups to large multinational corporations, I managed up to 18 engineers throughout the stack including mobile, web frontend, and backend along with quality assurance.</p>
-                <p>As Diamond Kinetics' Director of Software Engineering, I lead mobile and full-stack engineering and quality assurance, drive resource allocation, define roadmaps, architect systems, and implement outstanding applications in collaboration with the executive team and external stakeholders.</p>
+                <p>I am a technology leader with over twenty years of experience committed to developing world-class solutions for well-respected companies including <a href="https://www.mlb.com" target="_blank" class="company-link">Major League Baseball</a> and <a href="https://www.samsung.com" target="_blank" class="company-link">Samsung</a>. Having worked in mobile, consumer electronics, streaming media, and e-commerce in early stage startups to large multinational corporations, I managed up to 18 engineers throughout the stack including mobile, web frontend, and backend along with quality assurance.</p>
+                <p>As <a href="https://www.diamondkinetics.com" target="_blank" class="company-link">Diamond Kinetics</a>' Director of Software Engineering, I lead mobile and full-stack engineering and quality assurance, drive resource allocation, define roadmaps, architect systems, and implement outstanding applications in collaboration with the executive team and external stakeholders.</p>
             </div>
         </div>
     </section>
