--- a/index.html
+++ b/index.html
@@ -198,6 +198,8 @@
                     <a href="https://www.linkedin.com/in/dlewanda/" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="https://github.com/dlewanda" target="_blank"><i class="fab fa-github"></i></a>
                     <a href="https://medium.com/@dlewanda/" target="_blank"><i class="fab fa-medium"></i></a>
+                    <a href="https://bsky.app/profile/dlewanda.bsky.social" target="_blank"><i class="fab fa-bluesky"></i></a>
+                    <a href="https://mastodon.social/@dlewanda" target="_blank"><i class="fab fa-mastodon"></i></a>
                 </div>
             </div>
         </div>
