Update current role

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h2>About Me</h2>
             <div class="about-content">
                 <p>I am a technology leader with over twenty years of experience committed to developing world-class solutions for well-respected companies including <a href="https://www.mlb.com" target="_blank" class="company-link">Major League Baseball</a> and <a href="https://www.samsung.com" target="_blank" class="company-link">Samsung</a>. Having worked in mobile, consumer electronics, streaming media, and e-commerce in early stage startups to large multinational corporations, I managed up to 18 engineers throughout the stack including mobile, web frontend, and backend along with quality assurance.</p>
-                <p>As <a href="https://www.diamondkinetics.com" target="_blank" class="company-link">Diamond Kinetics</a>' Director of Software Engineering, I lead mobile and full-stack engineering and quality assurance, drive resource allocation, define roadmaps, architect systems, and implement outstanding applications in collaboration with the executive team and external stakeholders.</p>
+                <p>As the <a href="https://www.marlins.com" target="_blank" class="company-link">Miami Marlins</a>' Director of Baseball Applications, I lead the team responsible for building applications for the Baseball Operations department, where I drive resource allocation, define roadmaps, architect systems, and implement outstanding applications in collaboration with the executive team and other internal stakeholders.</p>
             </div>
         </div>
     </section>
