--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                             <li>Performance monitoring</li>
                             <li>User experience enhancement</li>
                         </ul>
-                        <p>At MLB, I lead my team to decrease application crash rates from 7% to 1.1% on the keystone MLB App for iOS with a focus on delivery quality and rigor.</p>
+                        <p>At MLB, I led my team to decrease application crash rates from 7% to 1.1% on the keystone MLB App for iOS with a focus on delivery quality and rigor.</p>
                     </div>
                 </div>
             </div>
