Add company carousel

--- a/index.html
+++ b/index.html
@@ -30,6 +30,18 @@
             <h1>David Lewanda</h1>
             <h2>Technology Leader & Software Engineering Director</h2>
             <p>Building world-class solutions and leading high-performing engineering teams</p>
+            <div class="company-carousel">
+                <div class="carousel">
+                    <div class="carousel-track">
+                        <img src="images/miami_marlins_2019-pres.png.webp" alt="Miami Marlins" class="carousel-logo">
+                        <img src="images/dk-logo.jpeg" alt="Diamond Kinetics" class="carousel-logo">
+                        <img src="images/Major_League_Baseball_logo.svg.png" alt="Major League Baseball" class="carousel-logo">
+                        <img src="images/samsung-logo.png" alt="Samsung" class="carousel-logo">
+                        <img src="images/CONNECTIFYINC-FULL-DARK-HALFCOLOR-128h.png.webp" alt="Connectify" class="carousel-logo">
+                        <img src="images/L3Harris_Technologies-White-Dark-Background-Logo.wine.svg" alt="L3Harris" class="carousel-logo">
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
